# mmf-serve

./: .bumpversion.cfg  .dev.update_mmf-meta.sh  ex.py  pyproject.toml  tox.ini
.github/workflows/: main.yml
mmf_serve/: __init__.py  __main__.py  rabbit_wrapper.py  token_proto.c
tests/: test_rabbit.py
