[tool.poetry]
name = "mmf-serve"
version = "0.1.6"
description = "Часть проекта MMF отвечающая за serving"
authors = ["Викторов Андрей Германович <andvikt@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
orjson = {version = "^3.2.0"}
cryptography = {version = "^36.0.0"}
requests = "^2.0.1"
mmf-meta = {version = "^0.1.10", extras=["all"]}
PyTurboJPEG = "^1.0.1"
aiofile = "^3.0.0"
python-multipart = {version = "^0.0.5", optional = true}
pydantic = {extras = ["dotenv"], version = "^1.9.0"}
fastapi = {version = "^0.64.0", optional = true}
aio-pika = {version = "^6.0.1", optional = true}

[tool.poetry.extras]
fastapi = ['fastapi', 'all']
python-multipart = ['fastapi', 'all']
aio-pika = ['rabbit', 'all']

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-asyncio = "^0.17.2"
aioboto3 = "^9.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
mmfserve = 'mmf_serve:cli'